[tool.poetry]
name = "sar_core_soa"
version = "v3.3.0"
description = "This repository corresponds to the a small python microservice that is going to be used used in the sar system."
authors = ["joseesco24 <josed.escobar@outlook.com>"]
readme = "readme.md"
packages = [{ include = "*", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
loguru = "^0.7.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
uvicorn = "^0.24.0"
pydantic-settings = "^2.0.3"
pymysql = "^1.1.0"
cryptography = "^42.0.5"
sqlmodel = "^0.0.16"
httpx = "^0.27.0"
cachetools = "^5.3.3"
stamina = "^24.2.0"
asyncache = "^0.3.1"
pytz = "^2024.1"
ariadne = "^0.23.0"
jinja2 = "^3.1.3"
newrelic = "^9.9.0"

[tool.poetry.group.dev.dependencies]
watchfiles = "^0.21.0"
pytest = "^8.0.2"
pytest-asyncio = "^0.23.5"
ruff = "^0.4.1"
mypy = "^1.9.0"

[tool.ruff]
src = ["src", "test/unit_test"]
output-format = "grouped"
line-length = 180
indent-width = 4
fix = true

[tool.ruff.format]
skip-magic-trailing-comma = true
quote-style = "double"

[tool.ruff.lint]
extend-select = ["E501"]
ignore = ["E203","E402"]

[tool.ruff.lint.isort]
case-sensitive = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
