[tool.poetry]
name = "sar_core_mdl"
version = "v3.4.0"
description = "The SAR Core Modulith is the incharge of provide some of the most important capabilities of the SAR system, as wastes collect request management, waste management and clients management"
authors = ["joseesco24 <josed.escobar@outlook.com>"]
readme = "readme.md"
packages = [{ include = "*", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
loguru = "^0.7.0"
pydantic = { extras = ["email"], version = "^2.6.4" }
uvicorn = "^0.29.0"
pydantic-settings = "^2.0.3"
pymysql = "^1.1.0"
cryptography = "^42.0.5"
sqlmodel = "^0.0.18"
httpx = "^0.27.0"
cachetools = "^5.3.3"
stamina = "^24.2.0"
asyncache = "^0.3.1"
pytz = "^2024.1"
ariadne = "^0.23.0"
jinja2 = "^3.1.3"

[tool.poetry.group.dev.dependencies]
watchfiles = "^0.21.0"
pytest = "^8.0.2"
pytest-asyncio = "^0.23.5"
ruff = "^0.4.1"
mypy = "^1.9.0"
poetry-audit-plugin = "^0.4.0"
poetry-plugin-export = "^1.7.1"

[tool.ruff]
extend-exclude = [".mypy_cache", ".pytest_cache", ".ruff_cache"]
extend-include = ["*.py", "*.pyi", "**/pyproject.toml"]
output-format = "grouped"
line-length = 180
indent-width = 4
src = ["."]
fix = true

[tool.ruff.format]
skip-magic-trailing-comma = true
quote-style = "double"

[tool.ruff.lint]
ignore = ["E203", "E402"]
# todo: activate isort when the project is ready
# extend-select = ["I"]

[tool.ruff.lint.isort]
# todo: activate isort when the project is ready
# forced-separate = ["uvicorn", "starlette", "fastapi", "pydantic", "pydantic_settings"]
# force-sort-within-sections = false
known-local-folder = ["src"]
# detect-same-package = false
force-single-line = true
case-sensitive = false
# length-sort = true
# from-first = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
